etc/envoy/temp_envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  clusters:
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device5_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.102
                port_value: 19010
    name: device5_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device10_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.22
                port_value: 19010
    name: device10_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device11_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.2
                port_value: 19010
    name: device11_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device4_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.122
                port_value: 19010
    name: device4_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device9_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.42
                port_value: 19010
    name: device9_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device8_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.52
                port_value: 19010
    name: device8_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device7_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.72
                port_value: 19010
    name: device7_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device6_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.82
                port_value: 19010
    name: device6_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device1_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.162
                port_value: 19010
    name: device1_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device12_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.222.147
                port_value: 19010
    name: device12_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device2_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.152
                port_value: 19010
    name: device2_cluster
    type: strict_dns
  - connect_timeout: 1s
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: device3_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.0.50.132
                port_value: 19010
    name: device3_cluster
    type: strict_dns
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9090
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - domains:
              - '*'
              name: local_service
              routes:
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device5
                  path: /api/v1/handshake
                name: device5_handshake
                route:
                  cluster: device5_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device5
                name: device5_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device5_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device10
                  path: /api/v1/handshake
                name: device10_handshake
                route:
                  cluster: device10_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device10
                name: device10_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device10_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device11
                  path: /api/v1/handshake
                name: device11_handshake
                route:
                  cluster: device11_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device11
                name: device11_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device11_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device4
                  path: /api/v1/handshake
                name: device4_handshake
                route:
                  cluster: device4_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device4
                name: device4_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device4_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device9
                  path: /api/v1/handshake
                name: device9_handshake
                route:
                  cluster: device9_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device9
                name: device9_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device9_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device8
                  path: /api/v1/handshake
                name: device8_handshake
                route:
                  cluster: device8_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device8
                name: device8_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device8_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device7
                  path: /api/v1/handshake
                name: device7_handshake
                route:
                  cluster: device7_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device7
                name: device7_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device7_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device6
                  path: /api/v1/handshake
                name: device6_handshake
                route:
                  cluster: device6_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device6
                name: device6_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device6_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device1
                  path: /api/v1/handshake
                name: device1_handshake
                route:
                  cluster: device1_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device1
                name: device1_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device1_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device12
                  path: /api/v1/handshake
                name: device12_handshake
                route:
                  cluster: device12_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device12
                name: device12_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device12_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device2
                  path: /api/v1/handshake
                name: device2_handshake
                route:
                  cluster: device2_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device2
                name: device2_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device2_cluster
                  idle_timeout: 0s
                  timeout: 0s
              - match:
                  headers:
                  - name: :method
                    string_match:
                      exact: POST
                  - name: x-device-id
                    string_match:
                      exact: device3
                  path: /api/v1/handshake
                name: device3_handshake
                route:
                  cluster: device3_cluster
                  timeout: 30s
              - match:
                  path: /api/v1/receivers/stream
                  query_parameters:
                  - name: deviceId
                    string_match:
                      exact: device3
                name: device3_stream
                response_headers_to_add:
                - header:
                    key: Content-Type
                    value: application/json
                route:
                  cluster: device3_cluster
                  idle_timeout: 0s
                  timeout: 0s
          stat_prefix: grpc_json_transcoder
          stream_idle_timeout: 0s
    name: grpc_web_listener
